bug fix: no text entered in inputs on iphone

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	-webkit-touch-callout: none;
 	webkit-text-size-adjust: none;
-	-webkit-user-select: none;
+	/*-webkit-user-select: none;*/
 	outline: none;
 }
 body, html, h1, h2, h3, h4, h5, h6, p, div, ul, li { margin:0; padding:0;}
@@ -19,7 +19,6 @@ a:active { background:rgba(0,0,0,.3);}
 img { width:100%; height: auto;}
 form { padding:.75em; background:white;}
 form fieldset { border:none; margin:0; padding:0;}
-input:focus { }
 
 header, footer { clear:both; float:none; box-sizing:border-box; -moz-box-sizing:border-box; display:block; overflow:hidden;}
 header > *, footer > * { display:inline-block; z-index:1; position: relative;}
